--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					circle : false,
                     circlemarker : false,
 					marker: true {
-						icon: new customMarker()
+						icon: customMarker()
 					},
 				},
 				edit : false,
