--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true {
-						icon: customMarker()
-					},
+					marker: true,
 				},
 				edit : false,
 				remove: false
