--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 					circle : false,
                     circlemarker : false,
 					marker: true,
+					icon: {customMarker},
 				},
 				edit : false,
 				remove: false
