--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true,
-					icon: {customMarker},
+					marker: true
+					({icon: customMarker}),
 				},
 				edit : false,
 				remove: false
