--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true
+					marker: true,
 					({icon: customMarker}),
 				},
 				edit : false,
