--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 				iconSize: new L.Point(24, 24),
 				iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg'
     			}
-		});	
+		});
+	    	L.marker([50.505, 30.57], {icon: customMarker}).addTo(map);
+	    
 	    
 		//TODO: Change to your username, insert function on Carto, and Carto tablename
 		var config = {
