--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true,
+					marker: true, icon: customMarker,
 				},
 				edit : false,
 				remove: false
