--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		var customMarker= L.Icon.extend({
 			options: {
 				shadowUrl: null,
-				iconAnchor: new L.Point(12, 12),
-				iconSize: new L.Point(24, 24),
+				iconSize:     [38, 95],
+				iconAnchor:   [22, 94],
 				iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg'
     			}
 		});
