--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true, { 
-						icon: newIcon
-					},
+					marker: true,
+						icon: newIcon,
 				},
 				edit : false,
 				remove: false
