--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 			dialog.dialog("open");
 		});
 		
+	    	L.Icon.Default.prototype.options.iconUrl = 'https://image.flaticon.com/icons/svg/1754/1754527.svg';
+	    
+	    
 		var dialog = $("#dialog").dialog({
 			autoOpen: false,
 			height: 300,
