--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
 
-	    
+	    	var newIcon = L.Icon({
+			iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg'
+			iconSize: [64,74],
+			iconAnchor: [33,74],
+			popupAnchor: [0,-50]
+		});
 	    
 		//TODO: Change to your username, insert function on Carto, and Carto tablename
 		var config = {
@@ -114,6 +119,10 @@
 				cartoData = L.geoJson(data, {
 					onEachFeature: function (feature, layer) {
 						layer.bindPopup('<b>Name: </b>' + feature.properties.name + '<br>' + '<b>Doctor: </b>' + feature.properties.doctor + '<br>' + '<b>Address: </b>' + feature.properties.address + '<br>' + '<b>Contact Number: </b>' + feature.properties.contactnum + '<br>' + '<b>Fees (Initial/Succeeding): </b>' + feature.properties.fee + '<br>' + '<b>Website: </b>' + feature.properties.website + '<br>' + '<b>Opening Hours: </b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: </b>' + feature.properties.notes + '');
+					}
+					pointToLayer: function(geoJsonPoint, latlng) {
+						return L.marker(latlng, {
+							icon: newIcon
 					}
 				}).addTo(map);
 			});
