--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script>
 
 	    	var newIcon = L.Icon({
-			iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg'
+			iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg',
 			iconSize: [64,74],
 			iconAnchor: [33,74],
 			popupAnchor: [0,-50]
