--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 				cartoData = L.geoJson(data, {
 					onEachFeature: function (feature, layer) {
 						layer.bindPopup('<b>Name: </b>' + feature.properties.name + '<br>' + '<b>Doctor: </b>' + feature.properties.doctor + '<br>' + '<b>Address: </b>' + feature.properties.address + '<br>' + '<b>Contact Number: </b>' + feature.properties.contactnum + '<br>' + '<b>Fees (Initial/Succeeding): </b>' + feature.properties.fee + '<br>' + '<b>Website: </b>' + feature.properties.website + '<br>' + '<b>Opening Hours: </b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: </b>' + feature.properties.notes + '');
-					},
-					pointToLayer: function (data, layer) {
-						return L.marker(data, {
-							icon: newIcon
-						});
-					}				
+					}
+					// pointToLayer: function (data, layer) {
+					//	return L.marker(data, {
+					//		icon: newIcon
+					//	});
+					//}				
 				}).addTo(map);
 			});
 		}
