--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true,
+					marker: {
+						icon: newIcon
+					},
 				},
 				edit : false,
 				remove: false
