--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script>
 
 	    	var newIcon = L.Icon({
-			iconUrl: 'https://github.com/anditabinas/mhawhereness/blob/master/mental-health.svg',
+			iconUrl: 'mental-health.svg',
 			iconSize: [64,74],
 			iconAnchor: [33,74],
 			popupAnchor: [0,-50]
