--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: {
+					marker: true,
+						{
 						icon: newIcon
 					},
 				},
