--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true
+					marker:
 						{
 						icon: newIcon
 					},
