--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script>
 
 	    	var newIcon = L.Icon({
-			iconUrl: 'mental-health.png',
+			iconUrl: '<ion-icon src="/path/to/external/file.svg"></ion-icon>',
 			iconSize: [64,74],
 			iconAnchor: [33,74],
 		});
