--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
 
-	    	var newIcon = L.Icon({
-			iconUrl: '<ion-icon src="/path/to/external/file.svg"></ion-icon>',
-			iconSize: [64,74],
-			iconAnchor: [33,74],
+	    	var newIcon = L.Icon.extend({
+			options: {
+				iconUrl: '<ion-icon src="/path/to/external/file.svg"></ion-icon>',
+				iconSize: [64,74],
+				iconAnchor: [33,74],
 		});
 	    
 		//TODO: Change to your username, insert function on Carto, and Carto tablename
