--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
 
-	    	var newIcon = L.Icon.extend({
-			options: {
-				iconUrl: '<ion-icon src="/path/to/external/file.svg"></ion-icon>',
-				iconSize: [64,74],
-				iconAnchor: [33,74],
+	    	// var newIcon = L.Icon.extend({
+		//	options: {
+		//		iconUrl: '<ion-icon src="/path/to/external/file.svg"></ion-icon>',
+		//		iconSize: [64,74],
+		//		iconAnchor: [33,74],
 			}	
-		});
+		// });
 	    
 		//TODO: Change to your username, insert function on Carto, and Carto tablename
 		var config = {
@@ -83,11 +83,11 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker:
-						{
-						icon: newIcon
-					},
-				},
+					marker: true,
+		//				{
+		//				icon: newIcon
+		//			},
+		//		},
 				edit : false,
 				remove: false
 			}
