--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 					*/
 					circle : false,
                     circlemarker : false,
-					marker: true,
+					marker: true
 		//				{
 		//				icon: newIcon
 		//			},
-		//		},
+				},
 				edit : false,
 				remove: false
 			}
