--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 					*/
 					circle : false,
                     			circlemarker : false,
-					marker: 
-						{
-						icon: newIcon
-					},									
+					marker: true
+			//			{
+			//			icon: newIcon
+			//		},									
 				},
 				edit : false,
 				remove: false
