--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input type="button" onclick="stopEdits()" value="Stop Your Editing Session"><br>
         <div id="credits"><p>Github Leaflet Draw Collection Tool &copy;2015, Mike Foster and Raphael Dumas</p><p>Mental Health aWHEREness &copy;2019, Sandra Tabinas</p></div>
       </div>
+      <div id="map"></div>	
     </div>
 
     <div id="dialog" title="Tell us About this MH Service/Facility">     
