--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Mental Health aWHEREness</h1>
       </div>
       <div id="controls">
-        <p>Click points for more information, or add your own.</br></p>
+        <b>Click points for more information, or add your own.</b>
         <input type="button" onclick="startEdits()" value="Click to Start Editing">
         <input type="button" onclick="stopEdits()" value="Stop Your Editing Session"><br>
       </div>
