--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <fieldset style="border: none;">
           <ul style="list-style-type: none; padding-left: 0px">
             <li><label for="fname">Name</label></li>
-            <li><input type="text" name="fname" id="fname" placeholder="Name of Service/Facility" class="text ui-widget-content ui-corner-all"></li>
+            <li><input required type="text" name="fname" id="fname" placeholder="Name of Service/Facility" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="doctor">Doctor</label></li>
             <li><input type="text" name="doctor" id="doctor" placeholder="Who should we look for?" class="text ui-widget-content ui-corner-all"></li>		  
             <li><label for="address">Address</label></li>
-            <li><input type="text" name="address" id="address" placeholder="Where can we find this?" class="text ui-widget-content ui-corner-all"></li>
+            <li><input required type="text" name="address" id="address" placeholder="Where can we find this?" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="contactnum">Contact Number</label></li>
-            <li><input type="text" name="contactnum" id="contactnum" placeholder="Telephone or Mobile number to call" class="text ui-widget-content ui-corner-all"></li>
+            <li><input required type="text" name="contactnum" id="contactnum" placeholder="Telephone or Mobile number to call" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="fee">Initial and Succeeding Fees</label></li>
             <li><input type="text" name="fee" id="fee" placeholder="Separate by comma if succeeding fees are diff. from initial" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="website">Website or Other Details</label></li>
@@ -161,8 +161,8 @@
 	    
 		var dialog = $("#dialog").dialog({
 			autoOpen: false,
-			height: 300,
-			width: 350,
+			height: 400,
+			width: 400,
 			modal: true,
 			position: {
 				my: "center center",
