--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id="dialog" title="Tell us About this MH Service/Facility">     
-      <form>
+      <form action="#0" method="post">
         <fieldset style="border: none;">
           <ul style="list-style-type: none; padding-left: 0px">
             <li><label for="fname">Name</label></li>
