--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
 	    
 		var dialog = $("#dialog").dialog({
 			autoOpen: false,
-			height: 400,
-			width: 400,
+			font: calibri,
+			height: 500,
+			width: 300,
 			modal: true,
 			position: {
 				my: "center center",
