--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <ul style="list-style-type: none; padding-left: 0px">
             <li><label for="fname">Name</label></li>
             <li><input required type="text" name="fname" id="fname" placeholder="Name of Service/Facility" class="text ui-widget-content ui-corner-all"></li>
-            <li><textarea id="doctor" name="doctor" rows="5" cols="40">Doctor</textarea></li>	  
+            <li><label for="doctor">Doctor</label></li>
+            <li><textarea id="doctor" name="doctor" rows="5" cols="40">Doctor</textarea></li>			  
             <li><label for="address">Address</label></li>
             <li><input required type="text" name="address" id="address" placeholder="Where can we find this?" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="contactnum">Contact Number</label></li>
