--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <li><label for="fname">Name</label></li>
             <li><input required type="text" name="fname" id="fname" placeholder="Name of Service/Facility" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="doctor">Doctor</label></li>
-            <li><textarea id="doctor" name="doctor" rows="5" cols="40">Doctor</textarea></li>			  
+            <li><textarea id="doctor" name="doctor" rows="5" cols="40">Who should we look for?</textarea></li>			  
             <li><label for="address">Address</label></li>
-            <li><input required type="text" name="address" id="address" placeholder="Where can we find this?" class="text ui-widget-content ui-corner-all"></li>
+            <li><textarea id="address" name="address" rows="5" cols="40">Where can we find this?</textarea></li>		            
             <li><label for="contactnum">Contact Number</label></li>
             <li><input required type="text" name="contactnum" id="contactnum" placeholder="Telephone or Mobile number to call" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="fee">Initial and Succeeding Fees</label></li>
