--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><label for="hours">Opening Hours</label></li>
             <li><input type="text" name="hours" id="hours" placeholder="Opening Hours" class="text ui-widget-content ui-corner-all"></li>
             <li><label for="notes">Notes/Recommendations</label></li>
-            <li><input type="text" name="notes" id="notes" placeholder="Notes/tips for others" class="text ui-widget-content ui-corner-all"></li>		  
+            <li><textarea id="notes" name="notes" rows="5" cols="40" placeholder="Notes/tips for others"></textarea></li>		 
           </ul>
           <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
         </fieldset>
