--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <fieldset style="border: none;">
           <ul style="list-style-type: none; padding-left: 0px">
             <li><label for="fname">Name</label></li>
-            <li><input required type="text" name="fname" id="fname" placeholder="Name of Service/Facility" class="text ui-widget-content ui-corner-all"></li>
+            <li><input required type="text" name="fname" id="fname" placeholder="Name of Service/Facility"></li>
             <li><label for="doctor">Doctor</label></li>
             <li><textarea id="doctor" name="doctor" rows="5" cols="40" placeholder="Who should we look for?"></textarea></li>			  
             <li><label for="address">Address</label></li>
             <li><textarea id="address" name="address" rows="5" cols="40" placeholder="Where can we find this?"></textarea></li>		            
             <li><label for="contactnum">Contact Number</label></li>
-            <li><input required type="text" name="contactnum" id="contactnum" placeholder="Telephone or Mobile number to call" class="text ui-widget-content ui-corner-all"></li>
+            <li><input required type="text" name="contactnum" id="contactnum" placeholder="Telephone or Mobile number to call"></li>
             <li><label for="fee">Initial and Succeeding Fees</label></li>
-            <li><input type="text" name="fee" id="fee" placeholder="Separate by comma if succeeding fees are diff. from initial" class="text ui-widget-content ui-corner-all"></li>
+            <li><input type="text" name="fee" id="fee" placeholder="Separate by comma if succeeding fees are diff. from initial"></li>
             <li><label for="website">Website or Other Details</label></li>
             <li><textarea id="website" name="website" rows="5" cols="40" placeholder="Website, Social Media, other details"></textarea></li>		  
             <li><label for="hours">Opening Hours</label></li>
-            <li><input type="text" name="hours" id="hours" placeholder="Opening Hours" class="text ui-widget-content ui-corner-all"></li>
+            <li><input type="text" name="hours" id="hours" placeholder="Opening Hours"></li>
             <li><label for="notes">Notes/Recommendations</label></li>
             <li><textarea id="notes" name="notes" rows="5" cols="40" placeholder="Notes/tips for others"></textarea></li>		 
           </ul>
