--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="credits"><p>Github Leaflet Draw Collection Tool &copy;2015, Mike Foster and Raphael Dumas</p><p>Mental Health aWHEREness &copy;2019, Sandra Tabinas</p></div>	
     </div>
 
-    <div id="dialog" title="Tell us About this MH Service/Facility">     
+    <div id="dialog" title="MH Service/Facility Details">     
       <form>
         <fieldset style="border: none;">
           <ul style="list-style-type: none; padding-left: 0px">
