--- a/index.html
+++ b/index.html
@@ -112,9 +112,14 @@
 			attribution: '&copy; <a href="mapbox://styles/anditabinas/cjy8p77s50mq91cmxkhhcw2uw">Mapbox</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
 			subdomains: 'abcd',
 			maxZoom: 19
-		});
+		}); 
 
 		Mapbox.addTo(map);
+	    
+	    	//Add Search; OSMGeocoder
+	    	var osmGeocoder = new L.Control.OSMGeocoder({placeholder: 'Search location...'});
+
+		OSMGeocoder.addTo(map);
 
 		//Fetches
 		var getData = "https://" + config.cartoUsername + ".carto.com/api/v2/sql?format=GeoJSON&q=" + sqlQuery;
@@ -182,6 +187,8 @@
 				console.log("Dialog closed");
 			}
 		});
+	    
+
 
 		form = dialog.find("form").on("submit", function (event) {
 			event.preventDefault();
