--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
 	    
 	    	//Add Search; OSMGeocoder
 	 	
-	    	var osmGeocoder = new L.Control.OSMGeocoder({placeholder: 'Search location...'});
+	    	var osmGeocoder = L.Control.OSMGeocoder({placeholder: 'Search location...'});
 
-		OSMGeocoder.addTo(map);
+		map.addControl(osmGeocoder);
+	    
 
 		//Fetches
 		var getData = "https://" + config.cartoUsername + ".carto.com/api/v2/sql?format=GeoJSON&q=" + sqlQuery;
