--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		Mapbox.addTo(map);
 	    
 	    	//Add Search; OSMGeocoder
-		var osmGeocoder = L.Control.OSMGeocoder({placeholder: 'Search location...'});
+		var osmGeocoder = new L.Control.OSMGeocoder({placeholder: 'Search location...'});
 
 		map.addControl(osmGeocoder);
 	    
