--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		Mapbox.addTo(map);
 	    
 	    	//Add Search; OSMGeocoder
-		var osmGeocoder = new L.Control.OSMGeocoder({position: 'topright'});
+		var osmGeocoder = new L.Control.OSMGeocoder({position: 'topleft'});
 		map.addControl(osmGeocoder);
 	    
 		//Fetches
