--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	    
 	    	//Add Locate Control
 		var lc = L.control.locate({
-	    		position: 'topleft'},
+	    		position: 'topleft',
 			icon: {
 				<i class="fas fa-user-circle"></i>
 			}
