--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 	    	//Add Locate Control
 		var lc = L.control.locate({
 	    		position: 'topleft',
-			icon: {
-				<i class="fas fa-user-circle"></i>
+			icon: "fas fa-user-circle"
 			}
 		});		
 		map.addControl(lc);		  
