--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	    	//Add Locate Control
 		var lc = L.control.locate({
 	    		position: 'topleft',
-			icon: "fas fa-user-circle"
+			icon: "fas fa-user-alt"
 		});		
 		map.addControl(lc);		  
 
