--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 	    	//Add Locate Control
 		var lc = L.control.locate({
 	    		position: 'topleft',
-			icon: "far fa-smile"
+			icon: <span class="far fa-smile">
+				</span>
 		});		
 		map.addControl(lc);		  
 
