--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 	    	//Add Locate Control
 		var lc = L.control.locate({
 	    		position: 'topleft',
-			icon: <span class="far fa-smile">
-				</span>
+			icon: 'fa fa-map-marker'
 		});		
 		map.addControl(lc);		  
 
