--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	    	//Add Locate Control
 		var lc = L.control.locate({
 	    		position: 'topleft',
-			icon: 'fa fa-map-marker'
+			icon: 'fas fa-child'
 		});		
 		map.addControl(lc);		  
 	    
