--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	    	//Add Locate Control
 		var lc = L.control.locate({
 	    		position: 'topleft',
-			icon: 'fas fa-shoe-prints'
+			icon: 'far fa-hand-point-down'
 		});		
 		map.addControl(lc);		  
 	    
