--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!--Based on https://github.com/radumas/crowdmap-basic and https://github.com/mjfoster83/web-map-workshop/blob/master/7_advancedMapping_CartoDB/index-completed.html-->
 <html>
   <head>
-<!--    <meta charset=utf-8 name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<!-- http://stackoverflow.com/a/3449338/4047679 -->
-<!--	  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->	  
+    <meta charset=utf-8 name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />	
     <title>Mental Health aWHEREness: Point Collection Tool</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
