--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!--Initially based on https://github.com/radumas/crowdmap-basic and https://github.com/mjfoster83/web-map-workshop/blob/master/7_advancedMapping_CartoDB/index-completed.html-->
+<!--Added more functionalities and plugins https://github.com/anditabinas/mhawhereness.-->
 <html>
 <head>
 	<meta charset="utf-8" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"><!-- http://stackoverflow.com/a/3449338/4047679 -->
@@ -34,41 +35,30 @@
 					<li><label for="fname">Name</label></li>
 					<li><input id="fname" name="fname" placeholder="Name of Service/Facility" required="" size="40" type="text"></li>
 					<li><label for="doctor">Doctor</label></li>
-					<li>
-					<textarea cols="40" id="doctor" name="doctor" placeholder="Who should we look for?" rows="5"></textarea></li>
+					<li><textarea cols="40" id="doctor" name="doctor" placeholder="Who should we look for?" rows="5"></textarea></li>
 					<li><label for="address">Address</label></li>
-					<li>
-					<textarea cols="40" id="address" name="address" placeholder="Where can we find this?" rows="5"></textarea></li>
+					<li><textarea cols="40" id="address" name="address" placeholder="Where can we find this?" rows="5"></textarea></li>
 					<li><label for="contactnum">Contact Number</label></li>
 					<li><input id="contactnum" name="contactnum" placeholder="Telephone or Mobile number to call" required="" size="40" type="text"></li>
 					<li><label for="fee">Initial and Succeeding Fees</label></li>
 					<li><input id="fee" name="fee" placeholder="Separate by comma if succeeding fees are diff. from initial" size="40" type="text"></li>
 					<li><label for="website">Website or Other Details</label></li>
-					<li>
-					<textarea cols="40" id="website" name="website" placeholder="Website, Social Media, other details" rows="5"></textarea></li>
+					<li><textarea cols="40" id="website" name="website" placeholder="Website, Social Media, other details" rows="5"></textarea></li>
 					<li><label for="hours">Opening Hours</label></li>
 					<li><input id="hours" name="hours" placeholder="Opening Hours" size="40" type="text"></li>
 					<li><label for="notes">Notes/Recommendations</label></li>
-					<li>
-					<textarea cols="40" id="notes" name="notes" placeholder="Notes/tips for others" rows="5"></textarea></li>
+					<li><textarea cols="40" id="notes" name="notes" placeholder="Notes/tips for others" rows="5"></textarea></li>
 				</ul><input style="position:absolute; top:-1000px" tabindex="-1" type="submit">
 			</fieldset>
 		</form>
 	</div>
-	<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js">
-	</script> 
-	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js">
-	</script> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
-	</script> 
-	<script src="https://rawgit.com/k4r573n/leaflet-control-osm-geocoder/master/Control.OSMGeocoder.js">
-	</script> 
-	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js">
-	</script> 
-	<script src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	</script> 
-	<script charset="utf-8" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.js">
-	</script> 
+	<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script> 
+	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script> 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
+	<script src="https://rawgit.com/k4r573n/leaflet-control-osm-geocoder/master/Control.OSMGeocoder.js"></script> 
+	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+	<script src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script> 
+	<script charset="utf-8" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.js"></script> 
 	<script>
 	           var newIcon = L.Icon({
 	           iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg',
@@ -77,20 +67,20 @@
 	       });     
 	       
 	       var config = { //TODO: Change to your username, insert function on Carto, and Carto tablename
-	           cartoUsername : "anditabinas",
-	           cartoInsertFunction : "insert_crowd_mapping_data",
-	           cartoTablename : "mhloc",
+	           cartoUsername: "anditabinas",
+	           cartoInsertFunction: "insert_crowd_mapping_data",
+	           cartoTablename: "mhloc",
 	           mapcenter: [12.51166, 122.08007],
 	           drawOptions: {
-	               draw : {
-	                   polygon : false,
-	                   polyline : false,
-	                   rectangle : false,
-	                   circle : false,
-	                               circlemarker : false,
+	               draw: {
+	                   polygon: false,
+	                   polyline: false,
+	                   rectangle: false,
+	                   circle: false,
+	                   circlemarker: false,
 	                   marker: true                                    
 	               },
-	               edit : false,
+	               edit: false,
 	               remove: false
 	           }
 	       };         
