--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					shadowUrl: null,
 					iconAnchor: new L.Point(12, 12),
 					iconSize: new L.Point(24, 24),
-					iconUrl: 'https://github.com/anditabinas/mhawhereness/blob/master/mental-health.png'
+					iconUrl: 'https://image.flaticon.com/icons/svg/1971/1971489.svg'
 				}
 			});
 		   
