--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 	                   circlemarker: false,
 	                   marker: {
 				icon: new MyCustomMarker()
-				}
+				},
+			   featureGroup: drawnItems,
 	               },
 	               edit: false,
 	               remove: false
