--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 	<script>
   	       
 
-		   var MyCustomMarker = L.Icon({
+		    var MyCustomMarker = L.Icon.extend({
 				options: {
 					shadowUrl: null,
-					iconAnchor: [12, 12],
-					iconSize: [24, 24],
+					iconAnchor: new L.Point(12, 12),
+					iconSize: new L.Point(24, 24),
 					iconUrl: 'https://image.flaticon.com/icons/svg/1971/1971489.svg'
 				}
 			});
@@ -118,7 +118,7 @@
 	       var getData = "https://" + config.cartoUsername + ".carto.com/api/v2/sql?format=GeoJSON&q=" + sqlQuery; //Fetches data input on the carto database
 	       function getGeoJSON() {
 	           $.getJSON(getData, function (data) {
-	               cartoData = L.geoJson(data, {				
+	               cartoData = L.geoJson(data, {
 	                   onEachFeature: function (feature, layer) {
 	                       layer.bindPopup('<b>Name: <\/b>' + feature.properties.name + '<br>' + '<b>Doctor: <\/b>' + feature.properties.doctor + '<br>' + '<b>Address: <\/b>' + feature.properties.address + '<br>' + '<b>Contact Number: <\/b>' + feature.properties.contactnum + '<br>' + '<b>Fees (Initial/Succeeding): <\/b>' + feature.properties.fee + '<br>' + '<b>Website: <\/b>' + feature.properties.website + '<br>' + '<b>Opening Hours: <\/b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: <\/b>' + feature.properties.notes + '');
 	                   }           
