--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	                   circle: false,
 	                   circlemarker: false,
 	                   marker: {
-						icon: new MyCustomMarker()
+						icon: MyCustomMarker()
 						},
 	                   featureGroup: drawnItems,
 	               },
