--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
     <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.js" charset="utf-8"></script>  
 	  
     <script>
-	    	var newIcon = L.Icon({
-			iconUrl: 'https://image.flaticon.com/icons/svg/1754/1754527.svg',
-			iconSize: [64,74],
-			iconAnchor: [33,74],	
-		});	    
+
+		var MHIcon = L.Icon({
+			shadowUrl: null,
+			iconAnchor: [12, 12],
+			iconSize: [24, 24],
+			iconUrl: 'https://image.flaticon.com/icons/svg/1971/1971489.svg'
+		});
+	
 	    
 		var config = { //TODO: Change to your username, insert function on Carto, and Carto tablename
 			cartoUsername : "anditabinas",
@@ -80,12 +83,12 @@
 			cartoTablename : "mhloc",
 			mapcenter: [12.51166, 122.08007],
 			drawOptions: {
-				draw : {
-					polygon : false,
-					polyline : false,
-					rectangle : false,
-					circle : false,
-                    			circlemarker : false,
+				draw: {
+					polygon: false,
+					polyline: false,
+					rectangle: false,
+					circle: false,
+                    circlemarker: false,
 					marker: true									
 				},
 				edit : false,
@@ -120,11 +123,15 @@
 				cartoData = L.geoJson(data, {
 					onEachFeature: function (feature, layer) {
 						layer.bindPopup('<b>Name: </b>' + feature.properties.name + '<br>' + '<b>Doctor: </b>' + feature.properties.doctor + '<br>' + '<b>Address: </b>' + feature.properties.address + '<br>' + '<b>Contact Number: </b>' + feature.properties.contactnum + '<br>' + '<b>Fees (Initial/Succeeding): </b>' + feature.properties.fee + '<br>' + '<b>Website: </b>' + feature.properties.website + '<br>' + '<b>Opening Hours: </b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: </b>' + feature.properties.notes + '');
-					}			
+				}, pointToLayer: function (feature, latlng) {
+						var marker = L.marker(latlng,{icon: MHIcon});
+						return marker;
+					}
 				}).addTo(map);
 			});
 		}
 		getGeoJSON();
+		
 		var drawnItems = new L.FeatureGroup();
 		var drawControl = new L.Control.Draw(config.drawOptions);
 		var controlOnMap = false;
