--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<title>Mental Health aWHEREness: Point Collection Tool</title>
 	<link href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" rel="stylesheet">
+	<link href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" rel="stylesheet">	
 	<link href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" rel="stylesheet">
 	<link href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
