--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			</fieldset>
 		</form>
 	</div>
+	<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>	
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script> 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
